Add styles to nodes in palette

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -68,6 +68,13 @@
   }
 }
 
+.flow-node {
+  background-color: #ccc;
+  line-height: 25px;
+  text-align: center;
+  border-radius: 6px;
+}
+
 .design2.designer-container {
   #node-red-templates {
     display: none;
