--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -72,8 +72,18 @@
   background-color: #ccc;
   line-height: 25px;
   text-align: center;
+  border: 1px solid #000;
   border-radius: 6px;
+
+  &.flow-node-comment {
+    background-color: #ffffff;
+
+    .flow-node-bg {
+      fill: #ffffff;
+    }
+  }
 }
+
 
 .design2.designer-container {
   #node-red-templates {
