Add debug style, remove old styles

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -75,6 +75,14 @@
   border: 1px solid #000;
   border-radius: 6px;
 
+  &.flow-node-debug {
+    background-color: #85cab0;
+
+    .flow-node-bg {
+      fill: #85cab0;
+    }
+  }
+
   &.flow-node-comment {
     background-color: #ffffff;
 
