Fatten the palette

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -1,6 +1,7 @@
 .flow-node {
   background-color: #ccc;
-  line-height: 25px;
+  line-height: 35px;
+  height: 40px;
   text-align: center;
   border: 1px solid #000;
   border-radius: 6px;
