Add button node and poll node

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -37,11 +37,29 @@
     }
   }
 
+  // Specific nodes
+
   &.flow-node-debug {
     background-color: #85cab0;
 
     .flow-node-bg {
       fill: #85cab0;
+    }
+  }
+
+  &.flow-node-button {
+    background-color: #f5dd6d;
+
+    .flow-node-bg {
+      fill: #f5dd6d;
+    }
+  }
+
+  &.flow-node-poll {
+    background-color: #f5c76d;
+
+    .flow-node-bg {
+      fill: #f5c76d;
     }
   }
 
