--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -63,6 +63,14 @@
     }
   }
 
+  &.flow-node-schedule {
+    background-color: #d7bc40;
+
+    .flow-node-bg {
+      fill: #d7bc40;
+    }
+  }
+
   &.flow-node-comment {
     background-color: #ffffff;
 
