Remove console.log

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -55,6 +55,14 @@
     }
   }
 
+  &.flow-node-delay {
+    background-color: #526ca4;
+
+    .flow-node-bg {
+      fill: #526ca4;
+    }
+  }
+
   &.flow-node-poll {
     background-color: #f5c76d;
 
