Add styles for delay and switch

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -48,34 +48,42 @@
   }
 
   &.flow-node-button {
-    background-color: #f5dd6d;
+    background-color: #a6bbcf;
 
     .flow-node-bg {
-      fill: #f5dd6d;
+      fill: #a6bbcf;
     }
   }
 
   &.flow-node-delay {
-    background-color: #526ca4;
+    background-color: #e6e0f8;
 
     .flow-node-bg {
-      fill: #526ca4;
+      fill: #e6e0f8;
     }
   }
 
   &.flow-node-poll {
-    background-color: #f5c76d;
+    background-color: #cea6bb;
 
     .flow-node-bg {
-      fill: #f5c76d;
+      fill: #cea6bb;
     }
   }
 
   &.flow-node-schedule {
-    background-color: #d7bc40;
+    background-color: #bbcea6;
 
     .flow-node-bg {
-      fill: #d7bc40;
+      fill: #bbcea6;
+    }
+  }
+
+  &.flow-node-switch {
+    background-color: #e2d96e;
+
+    .flow-node-bg {
+      fill: #e2d96e;
     }
   }
 
