Adding classes and templates for nodes

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -94,6 +94,30 @@
       fill: #ffffff;
     }
   }
+
+  &.flow-node-http-request {
+    background-color: #ffffff;
+
+    .flow-node-bg {
+      fill: #ffffff;
+    }
+  }
+
+  &.flow-node-xml2js {
+    background-color: #526CA4;
+
+    .flow-node-bg {
+      fill: #526CA4;
+    }
+  }
+
+  &.flow-node-sentiment {
+    background-color: #ffffff;
+
+    .flow-node-bg {
+      fill: #ffffff;
+    }
+  }
 }
 
 .flow-link {
