Adding colors for nodes

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -96,26 +96,33 @@
   }
 
   &.flow-node-http-request {
-    background-color: #ffffff;
+    background-color: #FFC3A8;
 
     .flow-node-bg {
-      fill: #ffffff;
+      fill: #FFC3A8;
     }
   }
 
   &.flow-node-xml2js {
-    background-color: #526CA4;
-
+    background-color: #AAB7D4;
     .flow-node-bg {
-      fill: #526CA4;
+      fill: #AAB7D4;
     }
   }
 
   &.flow-node-sentiment {
-    background-color: #ffffff;
+    background-color: #85CAB0;
 
     .flow-node-bg {
-      fill: #ffffff;
+      fill: #85CAB0;
+    }
+  }
+
+  &.flow-node-function {
+    background-color: #ECBFAC;
+
+    .flow-node-bg {
+      fill: #ECBFAC;
     }
   }
 }
