updating css styles for designer nodes

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -118,6 +118,14 @@
     }
   }
 
+  &.flow-node-template {
+    background-color: #ECBFAC;
+
+    .flow-node-bg {
+      fill: #ECBFAC;
+    }
+  }
+
   &.flow-node-function {
     background-color: #ECBFAC;
 
