Flow Node color adjustments

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -96,10 +96,10 @@
   }
 
   &.flow-node-http-request {
-    background-color: #FFC3A8;
+    background-color: #a1cffd;
 
     .flow-node-bg {
-      fill: #FFC3A8;
+      fill: #a1cffd;
     }
   }
 
@@ -119,10 +119,18 @@
   }
 
   &.flow-node-function {
-    background-color: #ECBFAC;
+    background-color: #fdd0a2;
 
     .flow-node-bg {
-      fill: #ECBFAC;
+      fill: #fdd0a2;
+    }
+  }
+
+  &.flow-node-template {
+    background-color: #f3b567;
+
+    .flow-node-bg {
+      fill: #f3b567;
     }
   }
 }
