--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -2,6 +2,7 @@
   background-color: #ccc;
   line-height: 40px;
   height: 40px;
+  width:  40px;
   text-align: center;
   border: 1px solid #000;
   border-radius: 6px;
@@ -19,6 +20,10 @@
     .flow-node-bg {
       stroke: #ff7f0e;
     }
+  }
+
+  i {
+    margin-top: 5px;
   }
 
   //base styles.
