--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -271,7 +271,7 @@
   .palette-content {
     background: #fff;
     border-top: 1px solid #aaa;
-    padding-bottom: 3px;
+    padding-bottom: 9px;
   }
 
   .panel-header {
@@ -674,9 +674,11 @@
 }
 
 .palette_node {
-  margin: 10px auto;
+  margin-top: 9px;
+  margin-left: 9px;
   height: 40px;
-  width: 120px;
+  width: 40px;
+  display: inline-block;
   background-size: contain;
   position: relative;
 }
