Set a max width

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -101,6 +101,7 @@
   .palette {
     .no-user-select;
     min-width: 170px;
+    max-width: 170px;
     display: flex;
     flex-direction: column;
     background: #f3f3f3;
