add button click, track mouse for paste

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -34,6 +34,13 @@
     font-size: 12px;
   }
 
+  .flow-node-button {
+    fill: #0000ff;
+    stroke: #999;
+    stroke-width: 1;
+    cursor: pointer;
+  }
+
   .flow-node-label {
     cursor: move;
     stroke-width: 0;
