--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -35,10 +35,16 @@
   }
 
   .flow-node-button {
-    fill: #0000ff;
+    fill: #aaa;
+    shape-rendering : crispEdges;
     stroke: #999;
-    stroke-width: 1;
+    stroke-width: 2;
     cursor: pointer;
+    
+    &:hover {
+      fill: #ccc;
+      stroke: #aaa;
+    }
   }
 
   .flow-node-label {
@@ -180,4 +186,12 @@
   &.selected {
     stroke: #ff7f0e;
   }
+}
+
+.grid .tick {
+    stroke: lightgrey;
+    opacity: 0.7;
+}
+.grid path {
+      stroke-width: 0;
 }
