--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -190,7 +190,11 @@
 
 .grid .tick {
     stroke: lightgrey;
-    opacity: 0.7;
+    opacity: 0.4;
+
+  &.dark {
+    opacity: 0.9;
+  }
 }
 .grid path {
       stroke-width: 0;
