moved tab logic into a directive. Focus on tab name change.

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -197,7 +197,7 @@
         background: #fff;
         height: 29px;
       }
-      span {
+      span, a, form {
         margin: 5px;
       }
       .delete-flow {
