Make the pinch zoom pinch

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -40,7 +40,7 @@
     stroke: #999;
     stroke-width: 2;
     cursor: pointer;
-    
+
     &:hover {
       fill: #ccc;
       stroke: #aaa;
@@ -198,4 +198,9 @@
 }
 .grid path {
       stroke-width: 0;
+}
+
+.overlay {
+  fill: none;
+  pointer-events: all;
 }
