Add floaty buttons

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -82,6 +82,8 @@
 }
 
 .design2.designer-container {
+  margin: 0 -25px;
+
   #node-red-templates {
     display: none;
   }
@@ -714,5 +716,11 @@
 
 .palette_port_output {
   left: 85px;
+}
+
+.flow-toolbar {
+  position: fixed;
+  right: 10px;
+  top: 10px;
 }
 
