Float the omnibox on the top left

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -720,7 +720,13 @@
 
 .flow-toolbar {
   position: fixed;
-  right: 10px;
-  top: 10px;
+  right: 20px;
+  top: 20px;
+}
+
+.floating-omnibox {
+  position: fixed;
+  left: 20px;
+  top:  20px;
 }
 
