--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -707,6 +707,12 @@
   top: 20px;
 }
 
+.zoom-toolbar {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+
 .floating-omnibox {
   position: fixed;
   left: 20px;
@@ -717,3 +723,6 @@
   }
 }
 
+.button-shadow {
+  box-shadow: 0 2px 1px rgba(0,0,0,0.3);
+}
