Blue grid, navbar buttons

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -707,6 +707,16 @@
   top: 20px;
 }
 
+.logo-toolbar {
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+
+  img {
+    opacity: 0.5;
+  }
+}
+
 .zoom-toolbar {
   position: fixed;
   right: 20px;
