--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -8,6 +8,7 @@
 @import 'flow-nodes.less';
 @import 'flex.less';
 @import 'type.less';
+@import 'omnibox.less';
 
 html, body, .full-height {
   height: 100%;
