Use full height

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -136,10 +136,9 @@
     flex-direction: column;
     align-content: stretch;
     .flow-editor {
-      overflow: scroll;
       .flow-editor-workspace {
-        height: 5000px;
-        width: 5000px;
+        height: 100%;
+        width: 100%;
       }
     }
     .flow-editor-zoom-controls {
