--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -200,9 +200,12 @@
       stroke-width: 0;
 }
 
-.overlay {
-  cursor: -webkit-grab;
-  cursor: -moz-grab;
-  cursor: -ms-grab;
-  cursor: grab;
+.flow-editor-render-area {
+  &.grabby-hand {
+  cursor: -webkit-grabbing;
+  cursor: -moz-grabbing;
+  cursor: -ms-grabbing;
+  cursor: grabbing;
+  }
 }
+
