--- a/assets/less/omnibox.less
+++ b/assets/less/omnibox.less
@@ -2,7 +2,9 @@
   position: fixed;
   left: 20px;
   top:  20px;
-
+  input {
+    font-size: 1.25em;
+  }
   .dropdown-menu {
     width: 100%;
   }
@@ -16,22 +18,6 @@
   position: fixed;
   right: 20px;
   bottom: 20px;
-}
-
-.flow-toolbar {
-  position: fixed;
-  right: 20px;
-  top: 20px;
-}
-
-.logo-toolbar {
-  position: fixed;
-  left: 20px;
-  bottom: 20px;
-
-  img {
-    opacity: 0.5;
-  }
 }
 
 .omnibox-item {
