flow crud/selection

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -46,8 +46,9 @@
 }
 
 .flow-toolbar {
+  transition: all 0;
   .flow-name {
-    width: 300px;
+    width: 400px;
     .button-shadow;
     .flow-dropdown {
       cursor: pointer;
