--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -131,6 +131,7 @@
     .flow-editor {
       .flow-editor-workspace {
         width: 100%;
+        height: 100%;
       }
     }
     .flow-editor-zoom-controls {
