--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -667,13 +667,17 @@
       }
     }
     ul.flow-browser-debug {
+      background-color: rgba(0, 0, 0, 0.6);
       list-style: none;
       margin: 5px;
-      padding: 0;
+      border-radius: 5px;
+      padding: 10px;
+      min-height: 100%;
       li {
-        margin: 10px;
+        margin-top: 10px;
         pre {
-          background-color: white;
+          background-color: rgba(20, 20, 20, 0.6);
+          // color: white;
         }
       }
     }
