--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -1,5 +1,6 @@
 .flow-node {
   background-color: #ccc;
+  fill: none;
   line-height: 40px;
   height: 40px;
   width:  40px;
@@ -55,116 +56,11 @@
   }
 
   .flow-node-port {
-    fill: #ddd;
+    fill: #aaa;
     cursor: crosshair;
     &:hover {
       stroke: #ff7f0e;
       fill: #ff7f0e;
-    }
-  }
-
-  // Specific nodes
-
-  &.flow-node-debug {
-    background-color: #85cab0;
-
-    .flow-node-bg {
-      fill: #85cab0;
-    }
-  }
-
-  &.flow-node-button {
-    background-color: #a6bbcf;
-
-    .flow-node-bg {
-      fill: #a6bbcf;
-    }
-  }
-
-  &.flow-node-delay {
-    background-color: #e6e0f8;
-
-    .flow-node-bg {
-      fill: #e6e0f8;
-    }
-  }
-
-  &.flow-node-interval {
-    background-color: #cea6bb;
-
-    .flow-node-bg {
-      fill: #cea6bb;
-    }
-  }
-
-  &.flow-node-schedule {
-    background-color: #bbcea6;
-
-    .flow-node-bg {
-      fill: #bbcea6;
-    }
-  }
-
-  &.flow-node-switch {
-    background-color: #e2d96e;
-
-    .flow-node-bg {
-      fill: #e2d96e;
-    }
-  }
-
-  &.flow-node-comment {
-    background-color: #ffffff;
-
-    .flow-node-bg {
-      fill: #ffffff;
-    }
-  }
-
-  &.flow-node-http-request {
-    background-color: #a1cffd;
-
-    .flow-node-bg {
-      fill: #a1cffd;
-    }
-  }
-
-  &.flow-node-xml2js {
-    background-color: #AAB7D4;
-    .flow-node-bg {
-      fill: #AAB7D4;
-    }
-  }
-
-  &.flow-node-sentiment {
-    background-color: #85CAB0;
-
-    .flow-node-bg {
-      fill: #85CAB0;
-    }
-  }
-
-  &.flow-node-template {
-    background-color: #ECBFAC;
-
-    .flow-node-bg {
-      fill: #ECBFAC;
-    }
-  }
-
-  &.flow-node-function {
-    background-color: #fdd0a2;
-
-    .flow-node-bg {
-      fill: #fdd0a2;
-    }
-  }
-
-  &.flow-node-template {
-    background-color: #f3b567;
-
-    .flow-node-bg {
-      fill: #f3b567;
     }
   }
 }
