--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -1,13 +1,10 @@
-@import 'lib/bootstrap/bootstrap.less';
-@import 'lib/bootstrap-social.less';
-@import 'lib/animate.less';
+@import '../lib/bootstrap/less/variables.less';
 @import 'animations.less';
 @import 'device.less';
 @import 'nodes.less';
 @import 'flow.less';
 @import 'flow-nodes.less';
 @import 'flex.less';
-@import 'type.less';
 @import 'omnibox.less';
 
 html, body, .full-height {
