Revert "clean up assets"
This reverts commit aea44327e3d56f256ec9112af50fb0536b01ece7.

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -1,10 +1,13 @@
-@import '../lib/bootstrap/less/variables.less';
+@import 'lib/bootstrap/bootstrap.less';
+@import 'lib/bootstrap-social.less';
+@import 'lib/animate.less';
 @import 'animations.less';
 @import 'device.less';
 @import 'nodes.less';
 @import 'flow.less';
 @import 'flow-nodes.less';
 @import 'flex.less';
+@import 'type.less';
 @import 'omnibox.less';
 
 html, body, .full-height {
