--- a/assets/less/omnibox.less
+++ b/assets/less/omnibox.less
@@ -21,9 +21,13 @@
 }
 
 .omnibox-item {
-  padding: 20px 10px;
+  padding: 0 0 10px 0;
   border-bottom: 1px solid #ddd;
   &:hover {
     background-color: #eee;
+  }
+
+  .omnibox-action-icon {
+    padding-top: 10px;
   }
 }
