--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -9,6 +9,7 @@
 @import 'flex.less';
 @import 'type.less';
 @import 'omnibox.less';
+@import 'admin.less';
 
 html, body, .full-height {
   height: 100%;
