Sending invites with prefinery works, we still need to add verification to verify the invites.

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -10,6 +10,7 @@
 @import 'type.less';
 @import 'omnibox.less';
 @import 'admin.less';
+@import 'invitation.less';
 
 html, body, .full-height {
   height: 100%;
