--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -11,12 +11,4 @@
 @import 'omnibox.less';
 @import 'admin.less';
 @import 'invitation.less';
-
-html, body, .full-height {
-  height: 100%;
-}
-.page-header {
-  h1 {
-    margin-top: 70px;
-  }
-}
+@import 'styles.less';
