Fix scrolling in debug panel

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -684,6 +684,15 @@
       border-radius: 5px;
       padding: 10px;
       min-height: 100%;
+
+      li {
+        margin-top: 10px;
+
+        pre[class*="language-"] {
+          overflow: auto;
+          max-height: none;
+        }
+      }
     }
   }
 }
