hide scrollbars when no overflow

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -44,7 +44,8 @@
 .group-info-panel-body {
   max-height: 280px !important;
   min-height: 280px !important;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .group-summary {
