--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -15,6 +15,12 @@
   -ms-user-select: none;
   user-select: none;
 
+  &.error {
+    stroke: #f00;
+    box-shadow: 0 0 9px #f00;
+    -webkit-box-shadow: 0 0 9px #f00;
+  }
+
   &.selected {
     stroke: #ff7f0e;
 
