Fixed and now working edit / share flows

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -680,6 +680,9 @@
         }
       }
     }
+    .share-flows {
+      height: 40vh;
+    }
     ul.flow-browser-debug {
       list-style: none;
       margin: 5px;
