--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -681,7 +681,7 @@
       }
     }
     .share-flows {
-      height: 40vh;
+      height: 100%;
     }
     ul.flow-browser-debug {
       list-style: none;
