Mode errors more apparent on share flows

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -683,6 +683,9 @@
     .share-flows {
       height: 100%;
     }
+    .flow-browser-shareflows.has-error .share-flows, .flow-browser-shareflows.has-success .share-flows {
+      border-width: 0.2em;
+    }
     ul.flow-browser-debug {
       list-style: none;
       margin: 5px;
