Fix the top right bar in the designer on safari

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -61,14 +61,21 @@
       .flow-font;
     }
   }
-  display: flex;
+  // display: flex;
   position: fixed;
+  display: -webkit-flex;
+  display: flex;
   right: 20px;
   top: 20px;
+
   .btn-group {
     margin: 0 5px;
     display: flex;
     align-items: flex-start;
+  }
+
+  .input-group {
+    margin: 0 5px;
   }
 }
 
