Fix flow node editor making the designer unreactive

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -72,6 +72,9 @@
 }
 
 .flow-node-editor {
+  position: absolute;
+  width: 500px;
+
   &.flow-node-editor-debug {
     .debug-node-form {
       display: none;
