Add some side padding to the top bar

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -52,6 +52,8 @@
   display: -webkit-flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .flow-toolbar {
