add compose node, add status indicator to flows, add dynamic params notes to logic nodes

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -83,6 +83,10 @@
       overflow-y: scroll;
       .flow-font;
     }
+    .flow-item {
+      margin: 5px 0;
+      border-bottom: 1px solid #ddd;
+    }
   }
 
   .flow-toolbar-btn-toolbar {
