fixed scrolling, omnibox issues. added more forms.

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -84,15 +84,15 @@
 }
 
 .flow-node-editor {
-position: absolute;
-
-width:400px;  
-   &.ng-hide-remove {
-   .show-animation
-  }
-  &.ng-hide-add {
-   .hide-animation;
-  }
+  position: absolute;
+  max-height: 450px;
+  width:400px;  
+     &.ng-hide-remove {
+     .show-animation
+    }
+    &.ng-hide-add {
+     .hide-animation;
+    }
 }
 
 .flow-link {
