--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -88,7 +88,7 @@
   max-height: 450px;
   width:400px;  
      &.ng-hide-remove {
-     .show-animation
+     .show-animation;
     }
     &.ng-hide-add {
      .hide-animation;
