--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -56,6 +56,11 @@
   padding-right: 20px;
 }
 
+.floating-omnibox .dropdown-menu {
+  width: 100%;
+  overflow-y: scroll;
+}
+
 .flow-toolbar {
   transition: all 0;
   display: flex;
