initial commit of the bill of materials list.

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -9,3 +9,13 @@ html, body, .full-height {
 .alert-info h4 {
   color: rgba(0, 0, 0, 0.6);
 }
+
+.bill-of-materials-icon {
+  .node-thumbnail;
+  min-width: 200px;
+  margin: 2em;
+}
+
+.bill-of-materials {
+  min-width: 80%;
+}
