use nodetypes for the bill of materials page.

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -18,4 +18,12 @@ html, body, .full-height {
 
 .bill-of-materials {
   min-width: 80%;
+  .md-tile-content {
+    h3 {
+      font-size: 3em;
+    }
+    h4 {
+      font-size: 2em;
+    }
+  }
 }
