--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -41,6 +41,10 @@
     }
   }
 
+  &.socket {
+
+  }
+
   i {
     margin-top: 5px;
   }
@@ -86,7 +90,7 @@
 .flow-node-editor {
   position: absolute;
   max-height: 450px;
-  width:500px;  
+  width:500px;
      &.ng-hide-remove {
      .show-animation;
     }
