--- a/assets/less/lib/bootstrap/navbar.less
+++ b/assets/less/lib/bootstrap/navbar.less
@@ -1,3 +1,21 @@
+md-sidenav.md-sidenav-left {
+  margin-left: -15px;
+
+  md-content {
+    a {
+      font-size: 1.4em;
+      display: block;
+      padding-left: 16px;
+      height: 48px;
+    }
+
+    span {
+      margin-left: 39px;
+    }
+  }
+}
+
+
 //
 // Navbars
 // --------------------------------------------------
