It was working for a while, but then it stopped

--- a/assets/less/lib/bootstrap/navbar.less
+++ b/assets/less/lib/bootstrap/navbar.less
@@ -1,16 +1,24 @@
+.materialize {
+  height: 100%;
+  margin: 0 -15px;
+}
+
 md-sidenav.md-sidenav-left {
-  margin-left: -15px;
 
   md-content {
     a {
       font-size: 1.4em;
-      display: block;
       padding-left: 16px;
       height: 48px;
+      color: rgba(0, 0, 0, 0.87)
+    }
+
+    i {
+      width: 30px;
     }
 
     span {
-      margin-left: 39px;
+      margin-left: 26px;
     }
   }
 }
