--- a/assets/less/lib/bootstrap/navbar.less
+++ b/assets/less/lib/bootstrap/navbar.less
@@ -4,6 +4,14 @@
 }
 
 md-sidenav.md-sidenav-left {
+  .navbar-logo {
+    padding: 10px;
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
 
   md-content {
     a {
