--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -1,6 +1,16 @@
 html, body, .full-height {
   height: 100%;
 }
+
+.materialize {
+  .page-heading {
+    font-size: 1.5em;
+  }
+}
+
+
+
+
 .page-header {
   h1 {
     margin-top: 70px;
