add template management page

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -798,3 +798,12 @@
   width: 48px;
   margin: 16px;
 }
+
+.grid-item {
+  width: calc(100% / 2);
+  height: 300px;
+  border: 3px solid #ddd;
+  background-color: white;
+}
+
+
