Doesn't look too bad ¯\_(ツ)_/¯

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -6,6 +6,14 @@ html, body, .full-height {
   .page-heading {
     font-size: 1.5em;
   }
+
+  .flow-image-but-really-the-flow {
+    background-color: seagreen;
+  }
+
+  .bill-of-materials {
+    background-color: blanchedalmond;
+  }
 }
 
 
